--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 body {
+  background-color: #f5f5f5;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +13,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.navbar{
+ background-color:  #000;
+}
+.form-group input, .custom-file-label{
+background-color: #f4f6fa;
+}
+.form-group{
+margin-top: 1.5rem;
 }
